Uploaded new version of frontend

--- a/frontend-almost ready/template/forms.html
+++ b/frontend-almost ready/template/forms.html
@@ -38,7 +38,7 @@
 											<span class="icon-bar"></span>
 											<span class="icon-bar"></span>
 										</button>
-										<a class="navbar-brand logo" href="index.html">ConDr</a>
+										<a class="navbar-brand logo" href="index.html">Consumer Decision Maker</a>
 									</div>
 
 									<!-- Collect the nav links, forms, and other content for toggling -->
@@ -48,6 +48,7 @@
 											<li><a href="about.html">About</a></li>
 											<li><a href="statistics.html">Statistics</a></li>
 											<li><a href="forms.html">Preferences</a></li>
+											<li><a href="groups.html">Groups</a></li>
 											<li><a href="contact.html">Contact</a></li>
 											<li><a href="login.html">Login In</a></li>
 											<li><a href="register.html">Register</a></li>
