--- a/frontend-almost ready/template/about.html
+++ b/frontend-almost ready/template/about.html
@@ -30,7 +30,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                       </button>
-                      <a class="navbar-brand logo" href="index.html">ConDr</a>
+                      <a class="navbar-brand logo" href="index.html">Consumer Decision Maker</a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -40,6 +40,7 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="statistics.html">Statistics</a></li>
                         <li><a href="forms.html">Preferences</a></li>
+                        <li><a href="groups.html">Groups</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li><a href="login.html">Login In</a></li>
                         <li><a href="register.html">Register</a></li>
@@ -96,7 +97,7 @@
         </div>
       </div>
     </section>
-  <div class="content">
+  <div class="content content-nopad">
   <a href="forms.html" class="btn btn-primary my-btn">Let's get started!</a>
   </div>
 
