--- a/frontend-almost ready/template/login.html
+++ b/frontend-almost ready/template/login.html
@@ -30,7 +30,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                       </button>
-                      <a class="navbar-brand logo" href="index.html">ConDr</a>
+                      <a class="navbar-brand logo" href="index.html">Consumer Decision Maker</a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -40,6 +40,7 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="statistics.html">Statistics</a></li>
                         <li><a href="forms.html">Preferences</a></li>
+                        <li><a href="groups.html">Groups</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li><a href="login.html">Login In</a></li>
                         <li><a href="register.html">Register</a></li>
@@ -54,12 +55,12 @@
 		<div class="row">
 			<div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
 				<div class="login-panel panel panel-default">
-					<div class="panel-heading">Register </div>
+					<div class="panel-heading">Log in</div>
 					<div class="panel-body">
 						<form role="form">
 							<fieldset>
 								<div class="form-group">
-									<input class="form-control" placeholder="Choose your username" name="username" type="username" autofocus="">
+									<input class="form-control" placeholder="Enter your username" name="username" type="username" autofocus="">
 								</div>
 								<div class="form-group">
 									<input class="form-control" placeholder="Password" name="password" type="password" value="">
@@ -69,7 +70,7 @@
 										<input name="remember" type="checkbox" value="Remember Me">Remember Me
 									</label>
 								</div>
-								<a href="index.html" class="btn btn-primary">Register now!</a>
+								<a href="index.html" class="btn btn-primary">Login</a>
 							</fieldset>
 						</form>
 					</div>
