--- a/frontend-almost ready/template/statistics.html
+++ b/frontend-almost ready/template/statistics.html
@@ -30,7 +30,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                       </button>
-                      <a class="navbar-brand logo" href="index.html">ConDr</a>
+                      <a class="navbar-brand logo" href="index.html">Consumer Decision Maker</a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -40,6 +40,7 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="statistics.html">Statistics</a></li>
                         <li><a href="forms.html">Preferences</a></li>
+                        <li><a href="groups.html">Groups</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li><a href="login.html">Login In</a></li>
                         <li><a href="register.html">Register</a></li>
@@ -63,6 +64,19 @@
 			</div>
 		</div><!--/.row-->
 
+
+      <div class="topwrapper"><alt="Peak Park Sailing Club"></div>
+      <form name="form1" method="post" action="php/top_users.php">
+          <input name="group_name" type=hidden id="group_name" value=<?php print $row[0];?>>
+          <table class="infotable">
+            <tr>
+              <td><strong>Group name: </strong></td>
+              <td><input name="groupname" type="text" id="groupname" value=<?php print $row[0];?>></td>
+            </tr>
+            <tr>
+              <td><strong>Group description:</strong></td>
+              <td><input name="groupdescription" type="text" id="groupdescription" value=<?php print $row[1];?>></td>
+            </tr>
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
