--- a/database_design/psgbd-etapa2/Assets/css/bootstrap.css
+++ b/database_design/psgbd-etapa2/Assets/css/bootstrap.css
@@ -4611,7 +4611,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   padding: 6px 12px;
   margin-left: -1px;
   line-height: 1.42857143;
-  color: #337ab7;
+  color: #2F937B;
   text-decoration: none;
   background-color: #fff;
   border: 1px solid #ddd;
@@ -4631,7 +4631,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > li > span:hover,
 .pagination > li > a:focus,
 .pagination > li > span:focus {
-  color: #23527c;
+  color: #2F937B;
   background-color: #eee;
   border-color: #ddd;
 }
@@ -4644,7 +4644,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   z-index: 2;
   color: #fff;
   cursor: default;
-  background-color: #337ab7;
+  background-color: #2F937B;
   border-color: #337ab7;
 }
 .pagination > .disabled > span,
