Updated search bar in products page

--- a/database_design/psgbd-etapa2/Assets/css/custom.css
+++ b/database_design/psgbd-etapa2/Assets/css/custom.css
@@ -18,5 +18,12 @@ a.btn-groups {
 }
 
 .page-item {
-  color: #2F937B; 
+  color: #2F937B;
+}
+
+.header_search {
+    margin-top: 24px;
+    width: 600px;
+    margin-right: 20px;
+    float: left;
 }
