--- a/database_design/psgbd-etapa2/Assets/css/products.css
+++ b/database_design/psgbd-etapa2/Assets/css/products.css
@@ -9,10 +9,24 @@
   height: 44px;
 }
 h2{
+  margin-bottom: 30px;
   color: white;
   text-align:center;
 }
 .center_div {
   margin: 0 auto;
-  width:44%;
+  width:38%;
+}
+
+.col-md-offset-1 {
+  margin-left: 0%;
+}
+.col-md-10 {
+    width: 60%;
+}
+.media-heading {
+    margin-top: 3px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    color:white;
 }
