--- a/database_design/psgbd-etapa2/Assets/css/contact.css
+++ b/database_design/psgbd-etapa2/Assets/css/contact.css
@@ -1,11 +1,3 @@
-
-body {
-  font-family: Helvetica, Arial, sans-serif;
-  font-weight: 100;
-  font-size: 20px;
-  line-height: 30px;
-}
-
 #contact input[type="text"],
 #contact input[type="email"],
 #contact input[type="tel"],
@@ -34,7 +26,7 @@ body {
   display: block;
   font-size: 17px;
   font-weight: 400;
-  color: #297214;
+  /*color: #297214;*/
 }
 
 fieldset {
@@ -80,7 +72,7 @@ fieldset {
   width: 100%;
   border: none;
   background: #2F937B;
-  color: #FFF;
+  /*color: #FFF;*/
   margin: 0 0 5px;
   padding: 10px;
   font-size: 18px;
