--- a/database_design/psgbd-etapa2/Assets/css/products.css
+++ b/database_design/psgbd-etapa2/Assets/css/products.css
@@ -8,7 +8,7 @@
 }
 h2{
   margin-bottom: 30px;
-  color: white;
+  /*color: white;*/
   text-align:center;
 }
 .center_div {
@@ -26,7 +26,7 @@ h2{
     margin-top: 3px;
     margin-left: 10px;
     margin-bottom: 10px;
-    color:white;
+    /*color:white;*/
 }
 .panel-body {
   padding: 5px;
