--- a/database_design/psgbd-etapa2/Assets/css/custom.css
+++ b/database_design/psgbd-etapa2/Assets/css/custom.css
@@ -53,7 +53,7 @@ a.btn.btn-primary.my-btn-dropdown {
 
 /*button color on active, focused and hover states*/
 a.btn.btn-primary.my-btn-dropdown:hover, a.btn.btn-primary.my-btn-dropdown:focus, a.btn.btn-primary.my-btn-dropdown:active {
-  background-color: #2ECC40;
+  background-color: #85144B;
   color: white;
 }
 
@@ -77,6 +77,34 @@ a .fa-custom {
   color: #2F937B;
 }
 
-a .fa-custom:hover {
-  color: #2ECC40;
+.logo a:hover {
+  color: #85144B;
+}
+
+nav#tf-footer {
+	padding: 40px 0;
+}
+
+nav#tf-footer p, nav#tf-footer ul {
+  margin: 0;
+  padding: 0;
+}
+
+@media screen and (max-width: 767px) {
+  #tf-service .col-md-4 {
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
+}
+
+a, a:visited {
+    color: #9d9d9d;
+}
+
+a:hover, a:active {
+    color: #fff;
+}
+
+.active a {
+    color: #fff;
 }
