--- a/database_design/psgbd-etapa2/Assets/css/contact.css
+++ b/database_design/psgbd-etapa2/Assets/css/contact.css
@@ -1,16 +1,16 @@
-#contact input[type="text"],
+/*#contact input[type="text"],
 #contact input[type="email"],
 #contact input[type="tel"],
 #contact input[type="url"],
 #contact textarea,
 #contact button[type="submit"] {
   font: 400 12px/16px "Roboto", Helvetica, Arial, sans-serif;
-}
+}*/
 
 #contact {
   background: #grey;
   padding: 15px;
-  margin: 50px;
+  /*margin: 50px;*/
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 
@@ -79,7 +79,8 @@ fieldset {
 }
 
 #contact button[type="submit"]:hover {
-  background: #43A047;
+  background: #85144B;
+  color: white;
   -webkit-transition: background 0.3s ease-in-out;
   -moz-transition: background 0.3s ease-in-out;
   transition: background-color 0.3s ease-in-out;
