--- a/app/public/css/groups.css
+++ b/app/public/css/groups.css
@@ -1,3 +1,4 @@
+
 .form-control {
   height:44px;
   border: solid #2F937B;
@@ -21,4 +22,7 @@ h2 {
     margin-bottom: 30px;
     color: white;
     text-align: center;
+}
+.row div .col-sm-12 .col-md-8 {
+  padding: 20px;
 }
