--- a/docs/_sass/jekyll-theme-architect.scss
+++ b/docs/_sass/jekyll-theme-architect.scss
@@ -26,7 +26,7 @@ header {
   padding-top: 40px;
   padding-bottom: 40px;
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
-  background: #2e7bcf url(../images/header-bg.jpg) 0 0 repeat-x;
+  background: #85144b;
   border-bottom: solid 1px #275da1;
 }
 
@@ -45,10 +45,11 @@ header h2 {
   width: 540px;
   margin-top: 0;
   margin-bottom: 0;
-  font-size: 26px;
+  font-size: 18px;
   font-weight: normal;
+  font-family: 'Verdana';
   line-height: 1.3;
-  color: #9ddcff;
+  color: whitesmoke;
   letter-spacing: 0;
 }
 
