--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -7,6 +7,7 @@
     <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}" media="screen" type="text/css">
     <link rel="stylesheet" href="{{ '/assets/css/print.css' | relative_url }}" media="print" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" media="screen" type="text/css">
     <link href='//fonts.googleapis.com/css?family=Playball' rel='stylesheet' type='text/css'>
 
     <!--[if lt IE 9]>
@@ -20,9 +21,9 @@
     <header>
       <div class="inner">
         <a href="{{ '/' | absolute_url }}">
-          <h1 style="font-family: 'Playball'"><span property="http://purl.org/dc/terms/title">{{ site.title | default: site.github.repository_name }}</span></h1>
+          <h1 style="font-family: 'Playball'"><i class="fa fa-money" style="color:#2F937B"></i> <span property="http://purl.org/dc/terms/title">{{ site.title | default: site.github.repository_name }}</span></h1>
         </a>
-        <h2>{{ site.description | default: site.github.project_tagline }} <br /> {{ site.college }}</h2>
+        <h2>{{ site.description | default: site.github.project_tagline }} <br /> <small>{{ site.college }}</small></h2>
         {% if site.github.is_project_page %}
           <a href="{{ site.github.repository_url }}" class="button"><small>View project on</small> GitHub</a>
         {% endif %}
