fix image width

--- a/app/public/css/products.css
+++ b/app/public/css/products.css
@@ -36,8 +36,8 @@ h2 {
   padding: 4px;
 }
 .media-object {
-  width: 108px;
-  height: 100px;
+  /*width: 108px;
+  height: 100px;*/
 }
 .media-body h4 {
     margin-top: 10px;
