add api documentation

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -62,6 +62,9 @@
           <br /><br />
           <p>Adrian Harabulă, Elisa Aioanei, Elena Anghelina, Mădălina Buza</p>
           Timestamp <span type=xsd:date>2017-05-25</span>
+
+          <h2>API</h2>
+          <p> See documentation <a href="/api">here</a></p>
         </aside>
       </div>
     </div>
